--- a/zray/Panels/installation.phtml
+++ b/zray/Panels/installation.phtml
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 zray.registerExtensionLoaded('CodeIgniter', function(extensionData, requestData) {
 	jQuery('#codeigniter-installation-steps').remove();
-	jQuery('#codeigniter-extension-installed').css('display', 'block');
+//	jQuery('#codeigniter-extension-not-installed').css('display', 'block');
 });
 
 zray.registerDataHandler('CodeIgniter', 'installation', function(extensionData, requestData) {
@@ -10,6 +10,9 @@ zray.registerDataHandler('CodeIgniter', 'installation', function(extensionData, 
 		jQuery('#codeigniter-extension-installed').css('display', 'none');
 		jQuery('#codeigniter-current-version').text(extensionData[0]);
 		jQuery('#codeigniter-supported-version').text(extensionData[1]);
+	}
+	else{
+		jQuery('div[data-name="zrayExtension:CodeIgniter/installation"]').remove();
 	}
 });
 	
@@ -27,19 +30,14 @@ if (!function_exists('image_base64_encode')) {
 }
 ?>
 <style>
-    #zend-dev-bar #codeigniter-extension-installed,
     #zend-dev-bar #codeigniter-extension-not-installed {
         height: 100px;
-        background-image: url(<?php echo image_base64_encode(__DIR__ . '/../images/success.png'); ?>);
+        background-image: url(<?php echo image_base64_encode(__DIR__ . '/../images/failure.png'); ?>);
         background-position: 28px 22px;
         padding-left: 74px;
         font-size: 18px;
         background-repeat: no-repeat;
         padding-top: 26px;
-    }
-
-    #zend-dev-bar #codeigniter-extension-not-installed {
-        background-image: url(<?php echo image_base64_encode(__DIR__ . '/../images/failure.png'); ?>);
     }
     #zend-dev-bar #codeigniter-extension-not-installed h4{ font-size:12px }
 </style>
@@ -59,10 +57,6 @@ if (!function_exists('image_base64_encode')) {
     
     <h2 style="font-weight:bold;font-size:14px">MX_Loader Class :</h2>
     <pre style="font-family: consolas, monospace;"><?php highlight_string(file_get_contents(__DIR__ . '/../Core/MX_Loader.php')); ?></pre>
-
-</div>
-<div id="codeigniter-extension-installed" style="display: none;">
-Installation complete, ready to go :)
 </div>
 
 <div id="codeigniter-extension-not-installed" style="display: none;">
